Sun Jun 24 19:49:23 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* lib/contrib/regex.c is not compiled on WIN32.

	* Added silc_net_get_socket_opt function to the
	  lib/silcutil/silcnet.h.

	* Added includes/silcwin32.h for WIN32 specific includes
	  and definitions.

	* Do not use ptime structure or any of the posix process
	  functions on WIN32 in lib/silccrypt/silrng.c.

	* Added silc_gettimeofday to provide generic function
	  for struct timeval on all platforms.  Added the function
	  to lib/silcutil/silcutil.h.

Sun Jun 24 12:19:52 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Moved the lib/silccore/silcsockconn.[ch] to the utility
	  library as they clearly belong there.  As a plus side we
	  can make the actual socket connection routines platform
	  specific.

	  Added also new generic function silc_socket_read and
	  silc_socket_write (that used to be silc_packet_[read/write].
	  The implementation of these are platform specific.

	* Added WIN32 specific routines of silc_socket_[read/write]
	  to lib/silcutil/win32/silcwin32sockconn.c.

Sat Jun 23 16:01:00 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added preliminary support for native WIN32 compilation under
	  cygwin (using the -mno-cygwin option for GCC) to the
	  ./configure.in.pre.  The --with-win32 now prepares the
	  compilation for native WIN32.

	* Rewrote the SILC Scheduler interface in the file
	  lib/silcutil/silcschedule.h.  The scheduler is now context
	  based and does not have anymore any global static scheduler.
	  Moved the Unix scheduler to the lib/silcutil/unix/ directory
	  and created lib/silcutil/win32 directory for WIN32 based
	  scheduler.

	* Added Unix specific network routines to the
	  lib/silcutil/unix/silcunixnet.c and the old
	  lib/silcutil/silcnet.c includes now only generic routines.

	  Added WIN32 specific network routines to the
	  lib/silcutil/win32/silcwin32net.c.

	* Added Unix specific utility functions from the