@@ -1,3 +1,12 @@
+Mon Jun 25 21:42:51 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* Do not add regex.h for WIN32.  The affected file
+	  includes/silcincludes.h.
+
+	* Added WIN32 DLL generation to lib/Makefile.am.pre.  It might
+	  not work yet 100%.  It generates the DLL's automatically
+	  when compiling with --with-win32 under cygwin.
+
 Sun Jun 24 19:49:23 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* lib/contrib/regex.c is not compiled on WIN32.
